--- a/Ayoub EL Jelladi/functions/index.html
+++ b/Ayoub EL Jelladi/functions/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-  <script src="script/script.js"></script>  
+  <script src="script/game.js"></script>  
 </body>
 </html>
